# tidy-python

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  customize_template_repo.py  pyproject.toml  renovate.json
.github/workflows/: codeql.yml  dependency-check.yaml  poetry-tests.yaml  release-please.yaml  release-please.yml.yaml  versions.yaml
src/tidy_python/: main.py
tests/: test_tidy_python.py
