[tool.poetry]
name = "tidy-python"
version = "0.4.0"
description = ""
authors = ["Nathan Drew <1035229+NaffanDroo@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-bdd = "^6.0.0"
pytest-xdist = "^3.0.0"
pre-commit = "^2.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
