[tool.poetry]
name = "tidy-python"
version = "0.9.0"
description = ""
authors = ["Nathan Drew <1035229+NaffanDroo@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-bdd = "^7.0.0"
pytest-xdist = "^3.2.0"
pre-commit = "^3.2.2"
mypy = "^1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
